crates/markdown/src/snapshots/yar_markdown__tests__render_markdown.snap
---
source: crates/markdown/src/lib.rs
expression: document
---
date: "2025-01-01 06:00:00 UTC"
updated: "2025-01-01 06:00:00 UTC"
content: "<p>Hello World</p>\n"
toc: []
summary: "<p>Hello World</p>\n"
frontmatter:
  title: Test
  tags:
    - a
    - b
    - c
  template: ~
  date: ~
  updated: ~
  slug: ~
  draft: false
  requires: []
